Lógica control de acceso a juegos

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -206,7 +206,7 @@
             <li><a href="{{ url_for('student.preguntas') }}">Contacto con el profesor</a></li>
             <li><a href="{{ url_for('student.rankings') }}">Rankings</a></li>
             <li><a href="{{ url_for('student.contenido') }}">Prueba de Código</a></li>
-            <li><a href="{{ url_for('general.games') }}">Juegos</a></li>
+            <li><a href="{{ url_for('game.games') }}">Juegos</a></li>
         </ul>
     </nav>
 
