Correciones CSS juegos

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}Pag. Principal{% endblock %}</title>
     <meta name="Autor" content="Noelia Carrasco Vilar">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    {% block imported_styles %}{% endblock %}
     <style type="text/css">
         body {
             margin: 0;
