--- a/app/templates/juegos.html
+++ b/app/templates/juegos.html
@@ -4,8 +4,11 @@
 Juegos
 {% endblock %}
 
-{% block head_extra %}
+{% block imported_styles %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+{% endblock %}
+
+{% block head_extra %}
 <style>
     iframe {
         padding: 0;
@@ -54,10 +57,6 @@ Juegos
 
     body, html {
         overflow: hidden;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
     }
 
     .show-result2 iframe {
@@ -110,6 +109,10 @@ Juegos
         position: absolute;
         top: 0;
         left: 0;
+    }
+
+    *, ::after, ::before {
+        box-sizing: initial; /* Vuelta a la configuración por defecto */
     }
 </style>
 {% endblock %}
