--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -54,6 +54,10 @@
                 text-decoration: none;
             }
 
+            .html, body {
+                overflow: hidden;
+            }
+
             @media (max-width: 500px) {
                 .login-form input, .login-form button {
                     width: 100%;
